# UniversalWin32DLLApplication

./: CMakeLists.txt  README.md
src/: dllmain.cpp  dllmain.h
